[package]
name = "well_behaved_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.13.4"
cw20 = "0.13.4"
thiserror = "1"
schemars = "0.8.8"
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }


[dev-dependencies]
cw-multi-test = "0.13.4"

[alias]
wasm = "build --target wasm32-unknown-unknown --release"
wasm-debug = "build --target wasm32-unknown-unknown"